syntax = "proto3";

package order;

option go_package = "github.com/yeegeek/uyou-Infrastructure/proto/order";

// 订单服务
service OrderService {
  // 创建订单
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  
  // 获取订单详情
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  
  // 获取用户订单列表
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  
  // 更新订单状态
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

// 创建订单请求
message CreateOrderRequest {
  int64 user_id = 1;
  repeated OrderItem items = 2;
  double total_amount = 3;
}

// 订单项
message OrderItem {
  int64 product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
}

// 创建订单响应
message CreateOrderResponse {
  int64 order_id = 1;
  string order_no = 2;
  string message = 3;
}

// 获取订单请求
message GetOrderRequest {
  int64 order_id = 1;
}

// 获取订单响应
message GetOrderResponse {
  int64 order_id = 1;
  string order_no = 2;
  int64 user_id = 3;
  repeated OrderItem items = 4;
  double total_amount = 5;
  string status = 6;
  string created_at = 7;
}

// 获取订单列表请求
message ListOrdersRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 获取订单列表响应
message ListOrdersResponse {
  repeated GetOrderResponse orders = 1;
  int32 total = 2;
}

// 更新订单状态请求
message UpdateOrderStatusRequest {
  int64 order_id = 1;
  string status = 2;
}

// 更新订单状态响应
message UpdateOrderStatusResponse {
  bool success = 1;
  string message = 2;
}
